<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_comida_diaria"
            android:icon="@drawable/ic_baseline_all_inclusive_24"
            android:title="@string/comida_diaria" />
        <item
            android:id="@+id/nav_favorito"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorito" />
        <item
            android:id="@+id/nav_tu_carrito"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/tu_carrito" />
    </group>
</menu>