<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.Registro">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/fondo_diseno"
        android:scaleType="centerCrop"
        android:src="@drawable/registro"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-142dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inknut_antiqua_black"
        android:text="@string/rappicop_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="19sp"
        android:fontFamily="@font/inknut_antiqua_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="13dp"
       android:hint="Nombre Completo"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_goneMarginTop="30dp" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="Correo Electronico "
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_goneMarginTop="30dp" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="Usuario"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo"
        app:layout_goneMarginTop="30dp" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:hint="Contraseña"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_goneMarginTop="30dp" />

    <EditText
        android:id="@+id/conficontraseña"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:hint="Confirmar Contraseña"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña"
        app:layout_goneMarginTop="30dp" />

    <RadioGroup
        android:id="@+id/genders"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conficontraseña"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genero"
            android:textColor="@color/white"
            android:textSize="15dp" />


        <RadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:text="Masculino"
            android:textSize="15sp"
            android:value="1" />

        <RadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:text="Femenino"
            android:textSize="15sp"
            android:value="2" />

        <RadioButton
            android:id="@+id/radioButton_otro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:text="Otro"
            android:textSize="15sp"
            android:value="2" />

    </RadioGroup>

    <Button
        android:onClick="envioDatos"
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_diseno"
        android:padding="20dp"
        android:text="Registrese"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genders"
        app:layout_constraintVertical_bias="0.436"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tengo cuenta"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintHorizontal_bias=".3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="iniciar_sesion"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintHorizontal_bias=".1"/>



</androidx.constraintlayout.widget.ConstraintLayout>